--- a/Website/index.html
+++ b/Website/index.html
@@ -20,6 +20,37 @@
         ></div>
         {{~ end; ~}}
         <h1>{{~ listingInfo.Name ~}}</h1>
+        <div>
+          <form
+            action="https://www.paypal.com/donate"
+            method="post"
+            target="_top"
+          >
+            <input type="hidden" name="business" value="QXEYT9DHDXAUC" />
+            <input type="hidden" name="no_recurring" value="0" />
+            <input
+              type="hidden"
+              name="item_name"
+              value="Help inspire me to continue creating new VRChat Prefabs and other software!"
+            />
+            <input type="hidden" name="currency_code" value="USD" />
+            <input
+              type="image"
+              src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"
+              border="0"
+              name="submit"
+              title="PayPal - The safer, easier way to pay online!"
+              alt="Donate with PayPal button"
+            />
+            <img
+              alt=""
+              border="0"
+              src="https://www.paypal.com/en_US/i/scr/pixel.gif"
+              width="1"
+              height="1"
+            />
+          </form>
+        </div>
         {{~ if listingInfo.Description; ~}}
         <div class="caption1 mb-2">{{ listingInfo.Description }}</div>
         {{~ end; ~}}
@@ -376,33 +407,6 @@
         >
       </div>
       {{~ end; ~}}
-    </div>
-    <div>
-      <form action="https://www.paypal.com/donate" method="post" target="_top">
-        <input type="hidden" name="business" value="QXEYT9DHDXAUC" />
-        <input type="hidden" name="no_recurring" value="0" />
-        <input
-          type="hidden"
-          name="item_name"
-          value="Help inspire me to continue creating new VRChat Prefabs and other software!"
-        />
-        <input type="hidden" name="currency_code" value="USD" />
-        <input
-          type="image"
-          src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"
-          border="0"
-          name="submit"
-          title="PayPal - The safer, easier way to pay online!"
-          alt="Donate with PayPal button"
-        />
-        <img
-          alt=""
-          border="0"
-          src="https://www.paypal.com/en_US/i/scr/pixel.gif"
-          width="1"
-          height="1"
-        />
-      </form>
     </div>
     <script type="module" src="app.js"></script>
   </body>
